kubedefs/dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
  labels:
    app: vprodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprodb
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      containers:
        - name: vprodb
          image: devopsaravind975/git:db
          volumemounts:
            - mountpath: /var/lib/mysql
              name: vpro-db-data
          ports:
            - containerPort: 1433
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
        - name: busybox
          image: busybox:latest
          args: ['rm', '-rf', "/var/lib/mysql/lost+found"]
          volumemounts:
            - name: vpro-db-data
              mountpath: /var/lib/mysql
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "64Mi"
              cpu: "100m"
