kubedefs/mcservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpromcache01
spec:
  selector:
    name: vpromc
  ports:
    - protocol: TCP
      port: 11211
      targetPort: vpromc-port
  type: ClusterIP
